增加了压缩文件的功能

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,10 @@
 </head>
 
 <body>
+
+<a href="https://blog.csdn.net/qq_41452937/article/details/107104058">构建过程</a>
 <div style="text-align: center;">
-    <h2>信1701-3班操作系统小学期七月三日报告上传</h2>
+    <h2>信1701-3班操作系统小学期七月五日报告上传</h2>
     <p>
         <strong style="color:green;">已交{{ num1 }}人</strong>
         /
@@ -57,7 +59,7 @@
             {% else %}
                 <!--否则当点击上传按钮时将字典i的值传给对应函数-->
                 <td>
-                    <button class="btn btn-primary btn-lg" data-toggle="modal" onclick="display_form({{ i }})">
+                    <button class="btn btn-primary" data-toggle="modal" onclick="display_form({{ i }})">
                         文件上传
                     </button>
                 </td>
